// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AdminAnalytics /> should render correctly - index 1`] = `
<div>
  <div
    class="sc-hBxehG julUME"
  >
    <h1
      class="sc-jSUZER glQaLI sc-bjfHbI cBkNPA"
      id="admin-only"
    >
      Admin only
    </h1>
    <span
      class="sc-hHTYSt cRxHgE"
    >
      You need to be logged in with an admin account to view this content.
      <br />
      <a
        class="sc-gswNZR bbFtvE"
        href="/login"
      >
        <span
          class="sc-ftTHYK cRFGYD"
        >
          Got a different admin account? Log in here.
        </span>
      </a>
    </span>
  </div>
</div>
`;

exports[`<AdminAnalytics /> should render correctly with admin user 1`] = `
<div>
  <div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <div
        class="sc-kDvujY bJLGdG"
      >
        <a
          class="sc-gswNZR bbFtvE"
          href="/admin"
        >
          <span
            class="sc-ftTHYK cRFGYD"
          >
            ⇠ Admin
          </span>
        </a>
      </div>
    </div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <h1
        class="sc-eDvSVe fsBEuM sc-jrcTuL jiMlto"
      >
        Admin analytics
      </h1>
    </div>
  </div>
  <div>
    <button
      class="sc-bYMpWt eOjxid admin-analyticsstyles__Control-sc-gt0i0n-2 dSUxYS"
      type="button"
    >
      <span
        class="sc-ilhmMj ekZiiW"
      >
        Reload analytics
      </span>
    </button>
    <button
      class="sc-bYMpWt eOjxid admin-analyticsstyles__Control-sc-gt0i0n-2 dSUxYS"
      type="button"
    >
      <span
        class="sc-ilhmMj ekZiiW"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="admin-analyticsstyles__CardContainer-sc-gt0i0n-0 bPrTzl"
  />
</div>
`;

exports[`<AdminAnalytics /> should render correctly with analytics 1`] = `
<div>
  <div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <div
        class="sc-kDvujY bJLGdG"
      >
        <a
          class="sc-gswNZR bbFtvE"
          href="/admin"
        >
          <span
            class="sc-ftTHYK cRFGYD"
          >
            ⇠ Admin
          </span>
        </a>
      </div>
    </div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <h1
        class="sc-eDvSVe fsBEuM sc-jrcTuL jiMlto"
      >
        Admin analytics
      </h1>
    </div>
  </div>
  <div>
    <button
      class="sc-bYMpWt eOjxid admin-analyticsstyles__Control-sc-gt0i0n-2 dSUxYS"
      type="button"
    >
      <span
        class="sc-ilhmMj ekZiiW"
      >
        Reload analytics
      </span>
    </button>
    <button
      class="sc-bYMpWt eOjxid admin-analyticsstyles__Control-sc-gt0i0n-2 dSUxYS"
      type="button"
    >
      <span
        class="sc-ilhmMj ekZiiW"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="admin-analyticsstyles__CardContainer-sc-gt0i0n-0 bPrTzl"
  />
</div>
`;

exports[`<AdminAnalytics /> should render correctly with initial state 1`] = `
<div>
  <div
    class="sc-hBxehG julUME"
  >
    <h1
      class="sc-jSUZER glQaLI sc-bjfHbI cBkNPA"
      id="admin-only"
    >
      Admin only
    </h1>
    <span
      class="sc-hHTYSt cRxHgE"
    >
      You need to be logged in with an admin account to view this content.
      <br />
      <a
        class="sc-gswNZR bbFtvE"
        href="/login"
      >
        <span
          class="sc-ftTHYK cRFGYD"
        >
          Got a different admin account? Log in here.
        </span>
      </a>
    </span>
  </div>
</div>
`;

exports[`<AdminAnalytics /> should render correctly with loadError 1`] = `
<div>
  <div
    aria-label="Loading"
    class="sc-dmctIk kfbqRZ page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-idXgbr irOVYZ"
    >
      <div
        class="sc-dIfARi hEqwgc"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-idXgbr kBIQoq"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-dIfARi hEqwgc"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-idXgbr kBIQoq"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-dIfARi hEqwgc"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-idXgbr kBIQoq"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-dIfARi hEqwgc"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-idXgbr kBIQoq"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-dIfARi hEqwgc"
        style="margin-left: -0px;"
      />
    </div>
  </div>
  <div
    class="sc-hBxehG julUME"
  >
    <h1
      class="sc-gKPRtg jJVvWo sc-bjfHbI iYWdbA"
      id="this-is-taking-a-while.-maybe-something-isn't-quite-right..."
    >
      This is taking a while. Maybe something isn't quite right...
    </h1>
  </div>
</div>
`;

exports[`<AdminAnalytics /> should render correctly with loading=true 1`] = `
<div>
  <div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <div
        class="sc-kDvujY bJLGdG"
      >
        <a
          class="sc-gswNZR bbFtvE"
          href="/admin"
        >
          <span
            class="sc-ftTHYK cRFGYD"
          >
            ⇠ Admin
          </span>
        </a>
      </div>
    </div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <h1
        class="sc-eDvSVe fsBEuM sc-jrcTuL jiMlto"
      >
        Admin analytics
      </h1>
    </div>
  </div>
  <div>
    <button
      class="sc-bYMpWt euNhlh admin-analyticsstyles__Control-sc-gt0i0n-2 dSUxYS"
      disabled=""
      type="button"
    >
      <span
        class="sc-ilhmMj fGBSrt"
      >
        Reload analytics
      </span>
      <div
        aria-hidden="true"
        class="sc-jIRcFI feQYRn"
      >
        <div
          class="sc-gikAfH jgusFv"
        >
          <div
            class="sc-ezOQGI qqaaF"
          />
          <div
            class="sc-ezOQGI ueiuF"
          />
          <div
            class="sc-ezOQGI jCjbUy"
          />
          <div
            class="sc-ezOQGI kILeMD"
          />
          <div
            class="sc-ezOQGI hgSieA"
          />
          <div
            class="sc-ezOQGI bOddnZ"
          />
          <div
            class="sc-ezOQGI isdZGN"
          />
          <div
            class="sc-ezOQGI ePwHxN"
          />
        </div>
      </div>
    </button>
    <button
      class="sc-bYMpWt eOjxid admin-analyticsstyles__Control-sc-gt0i0n-2 dSUxYS"
      type="button"
    >
      <span
        class="sc-ilhmMj ekZiiW"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="admin-analyticsstyles__CardContainer-sc-gt0i0n-0 bPrTzl"
  />
</div>
`;

exports[`<AdminAnalytics /> should render correctly with user 1`] = `
<div>
  <div
    class="sc-hBxehG julUME"
  >
    <h1
      class="sc-jSUZER glQaLI sc-bjfHbI cBkNPA"
      id="admin-only"
    >
      Admin only
    </h1>
    <span
      class="sc-hHTYSt cRxHgE"
    >
      You need to be logged in with an admin account to view this content.
      <br />
      <a
        class="sc-gswNZR bbFtvE"
        href="/login"
      >
        <span
          class="sc-ftTHYK cRFGYD"
        >
          Got a different admin account? Log in here.
        </span>
      </a>
    </span>
  </div>
</div>
`;
